# rust-daily

./: .env.example  .gitignore  Cargo.toml  DAEMON_MODE_GUIDE.md  FREEDIT_INTEGRATION.md  README.md  RSS_INTEGRATION_SUMMARY.md  RSS_SOURCES_GUIDE.md  cookies.txt  deduplication-example.md  demo.sh  headers.txt  rss_sources.toml  sample-output.md  template.md  test_integration.sh
reports/: 2025-08-03.json
src/: config.rs  daily_generator.rs  history.rs  main.rs  rss_parser.rs  rss_server.rs  scheduler.rs
