[package]
name = "rust-daily"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.16.0"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
rss = "2.0"
reqwest = { version = "0.12", features = ["json", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
thiserror = "2.0"
axum = "0.7"
tower = "0.5"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
tokio-cron-scheduler = "0.13"
